@@ -176,6 +176,7 @@ Version ${Version} (${Date})
  - Fixed removing diacritics by repeating them, this time for VNI and VIQR.
  - Fixed an issue with VIQR and VIQR* where entering "o```" added the tone mark
    back onto the vowel.
+ - Rich text editors can now be ignored by the IDs of their container frames.
  - Added support for the Add-ons Manager's search bar.
  - Added support for Firebug and ScribeFire when opened in separate windows.
- - Rich text editors can now be ignored by the IDs of their container frames.
+ - Added support for search dialogs in Thunderbird.
